# stocks-app

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  dashboard_plan.md  pyproject.toml  requirements-test.txt  run_dashboard.py  seed_portfolio.py  start-dev.bat  start.bat  start.ps1  take_screenshot.py  test_theme.py
.claude/: settings.json  settings.local.json
.streamlit/: config.toml
asymmetric/: __init__.py  config.py
dashboard/: __init__.py  app.py  config.py  styles.py  theme.py
docs/: AUDIT_REMEDIATION_HANDOFF.md  AUDIT_SESSION_HANDOFF.md  DASHBOARD_BUILD_SPEC.md  DASHBOARD_QUICK_START.md  PHASE2_HANDOFF.md  PHASE4_HANDOFF.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PHASE4_SESSION2_HANDOFF.md  SESSION_HANDOFF.md  color-conventions.md  current-work.md
scripts/: migrate_theses_conviction.py  migrate_v2.py
tests/: __init__.py  conftest.py  test_alert_checker.py  test_alerts.py  test_altman.py  test_bulk_manager.py  test_bulk_optimization.py  test_cash_flow.py  test_cli_commands.py  test_compare_command.py  test_composite.py  test_config.py  test_db_models.py  test_db_precompute.py  test_decision.py  test_dividends.py  test_edgar_client.py  test_formatting.py  test_gemini_client.py  test_integration_pipeline.py  test_mcp_responses.py  test_mcp_server.py  test_performance_analytics.py  test_piotroski.py  test_port_handling.py  test_portfolio.py  test_portfolio_manager.py  test_price_integration.py  test_rate_limiter.py  test_score_save.py  test_screen_command.py  test_screen_watchlist.py  test_sector_analyzer.py  test_sic_codes.py  test_thesis.py  (+9 more)
(+154 files in other folders)
